messages alignment fixed - coul look better

--- a/src/App.css
+++ b/src/App.css
@@ -98,9 +98,10 @@ Card:hover {
   display: flex;
   justify-content: center;
   font-family: "Courier New", Courier, monospace;
-  position: fixed;
-  top: 80vh;
-  width: 60%;
+  /* position: fixed;
+  top: 80vh; */
+  /* width: 60%; */
+
 }
 
 .findBook {
@@ -133,22 +134,31 @@ Card:hover {
 }
 
 .messages-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   height: 40vh;
   list-style-type: none;
   padding: 0;
 }
 .my-message {
+  display: block;
   background-color: rgb(0, 132, 255);
-  margin-left: 30vw;
+  /* margin-left: 30vw; */
+  align-self:flex-end;
 }
 .received-message {
+  display: block;
   background-color: #3f4042;
-  margin-right: 50vw;
+  /* margin: 0 auto; */
+  align-self: flex-start;
+  /* margin-right: 50vw; */
 }
 .message-item {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+  /* display: flex; */
+  /* align-items: center; */
+  /* flex-direction: column; */
   width: 30%;
   margin-bottom: 8px;
   padding: 12px 20px;
@@ -157,13 +167,17 @@ Card:hover {
   color: white;
 }
 
-.messages-container {}
+.messages-container {
+  /* display: flex; */
+  /* justify-content: center;
+  align-items: center; */
+}
 
 .messages-list{
   overflow: scroll;
   max-width: 100%;
   overflow-x: hidden;
-  padding: 0 150px;
+  /* padding: 0 150px; */
 }
 .bookHome {
   display: flex;
